# linear-gkr-rust

./: Cargo.toml
linear-gkr-rs/: Cargo.toml  README.md
linear-gkr-rs/circuit/: Cargo.toml
linear-gkr-rs/circuit/src/: gate.rs  lib.rs  parse.rs
linear-gkr-rs/cli/: Cargo.toml
linear-gkr-rs/cli/src/: main_fast_para_track.rs  main_fast_track.rs  main_slow_track.rs  main_zk.rs
linear-gkr-rs/examples/: test_circuit.txt
linear-gkr-rs/field/: Cargo.toml
linear-gkr-rs/field/src/: lib.rs
linear-gkr-rs/polynomial/: Cargo.toml
linear-gkr-rs/polynomial/src/: lib.rs  quad.rs
linear-gkr-rs/prover/: Cargo.toml
linear-gkr-rs/prover/src/: lib.rs
linear-gkr-rs/verifier/: Cargo.toml
linear-gkr-rs/verifier/src/: lib.rs
src/: lib.rs
src/linear_gkr/: circuit.rs  field.rs  mod.rs  polynomial.rs  prover.rs
src/parser/: sha.rs
src/vpd/: mod.rs  vpd.rs
